# vtb-hack

./: .env.example  README.md  index.html  package.json  pnpm-lock.yaml
assets/: index-6b5aea43.js  index-fe54f87e.css
backend/: .env  .env.example  .gitignore  README.md  docker-compose.yaml
backend/api/: Dockerfile  pyproject.toml  requiments.txt  requirements.txt
backend/api/app/: __main__.py  app.py  config.py
backend/api/app/core/: crud.py  database.py  dependencies.py
backend/api/app/data/: atms.csv  departments.csv
backend/api/app/endpoints/: additional_info.py  api.py  assistent.py  build_route.py  get.py  get_atms.py  select.py
backend/api/app/ml/: Dockerfile  bancomat_analysis.py  departments_analysis.py  docker-compose.yml
backend/api/app/models/: db_models.py  models.py
backend/api/app/schemas/: request_schemas.py  response_schemas.py
backend/api/app/utils/: calculate_route.py  data_loader.py
frontend/: .env  .eslintrc.cjs  Dockerfile  README.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  global.d.ts  index.css  main.tsx  vite-env.d.ts
frontend/src/api/endpoints/: atm.endpoint.ts  department.endpoint.ts  map.endpoint.ts  smart-search.endpoint.ts
frontend/src/api/models/: Location.ts  atm.model.ts  department.model.ts
frontend/src/shared/components/: LoadFilters.tsx
frontend/src/shared/constants/: elevation.ts
frontend/src/shared/hooks/: useClickOutside.ts  (+1 more)
ml/: Dockerfile  departments_analysis.py  predict_intent.py
src/: App.tsx
(+31 files in other folders)
